feat: escala de modelos (/bde spawn [escala] + /bde scale) + suite de tests JUnit/Mockito (v1.6.0)
- ScaleMath (puro): escala la matriz row-major (12 primeros floats), el SNBT
  del summon y los hitboxes authored; toMatrix centraliza el transpose JOML
- La animacion compilada premultiplica la escala del grupo (sin esto el modelo
  escalado saltaria a tamano 1 al animarse); warning si hay frames de fallback
- /bde scale re-summon in-place conservando grupo/yaw/animacion; persiste en
  spawned.yml; muebles siguen a 1.0 (sobrecarga retrocompatible)
- KeyframeParser extraido de AnimationManager (puro, sin Bukkit)
- 26 tests: ScaleMath, KeyframeParser, ModelGroup.countParts, ModelManager
  (libreria/snapshots con JavaPlugin mockeado via inline mock maker)